--- a/templates/index.html
+++ b/templates/index.html
@@ -53,7 +53,7 @@
 
   <section id="title">
     
-      <div  style="background-image: url('image.png');" class="container-fluid">
+      <div  class="container-fluid">
       <!-- Nav Bar -->
 
       <nav class="navbar navbar-expand-lg navbar-dark ">
@@ -101,7 +101,7 @@
   </section>
   <section id="blank">
     <h3>
-  Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
+ “A life saved is a family saved.” <br> "This too shall pass."
     </h3>
   </section>
 
