--- a/templates/medical_details.html
+++ b/templates/medical_details.html
@@ -68,48 +68,39 @@ input {
 
 
     <form method="post">
-        <center>
+
         <hr class="my-4">
         <h5 class="lead container"><strong>MEDICAL DETAILS</strong></h5><br>
         <div class="row">
 
             <div class="column ">
-                <label for="temp">&emsp;&emsp;Temperature:</label>
-                <input class="lead" type="number" id="temp" name="temp" value="" placeholder="Temperature">
+                &emsp;&emsp;&emsp;<label for="temp">&emsp;&emsp;Temperature:</label>
+                &emsp;<input class="lead" type="number" id="temp" name="temp" value="" placeholder="Temperature">
                 <br><br>
-                <label for="oxymeter">Oximeter Reading:</label>
-                <input class="lead" type="number" id="oxymeter" name="oxymeter" value=""
+                &emsp;&emsp;&emsp;<label for="oxymeter">Oximeter Reading:</label>
+                &emsp;<input class="lead" type="number" id="oxymeter" name="oxymeter" value=""
                              placeholder="Oxymeter Reading">
                 <br><br>
 
 
-               <label for="spiro_fec">Spirometry (FEV1):</label>
-                <input class="lead" type="number" id="spiro_fec" name="spiro_fec" value=" "
+                &emsp;&emsp;&emsp;&emsp;<label for="spiro_fec">Spirometry (FEV1):</label>
+                &emsp;<input class="lead" type="number" id="spiro_fec" name="spiro_fec" value=" "
                              placeholder="Spirometry FEC"/>
                 <br><br>
-               <label for="spiro_fvc">Spirometry (FVC):</label>
-                <input class="lead" type="number" id="spiro_fvc" name="spiro_fvc" value=""
+                &emsp;&emsp;&emsp;&emsp;<label for="spiro_fvc">Spirometry (FVC):</label>
+                &emsp;<input class="lead" type="number" id="spiro_fvc" name="spiro_fvc" value=""
                              placeholder="Spirometry FVC"/>
 
 
                 <br><br>
-            </div></div>
-        </center>
-    </form>
 
                 <p>
-                    <center>
                     <input class="btn btn-danger btn-lg" onclick="window.open('http://127.0.0.1:5000/menu_for_forms_positive');"
                            type="submit" value="Submit & Proceed"/>
-    </center>
                 </p>
-
-
+            </div>
         </div>
 
-
-</center>
-
-
+    </form>
 </body>
 </html>
